[gd_scene load_steps=34 format=3 uid="uid://utps300ebe1r"]

[ext_resource type="Texture2D" uid="uid://dyrltflos7dw1" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Palmeras/Palmera 1.png" id="1"]
[ext_resource type="Texture2D" uid="uid://b33v8ww4pmxd6" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Arena de Fondo.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dslfxcc73y24o" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/Primera capa de mar.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bs5rlwqxqebq0" path="res://Assets/Images/Story/Characters/Secondary/Bibliotecaria.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dm8ppwkpvvl7v" path="res://Assets/Images/LimpiandoCosta/Pantalla 1/Arbusto.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bumujsn6qvvxm" path="res://Assets/Images/Story/Characters/Secondary/DogKabu.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dgahw13ht63bm" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/tercera capa de mar.png" id="8"]
[ext_resource type="Texture2D" uid="uid://c1iue6jfocw8m" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/Ola.png" id="9"]
[ext_resource type="Texture2D" uid="uid://gnuvee0kld2o" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/Segunda capa de mar.png" id="10"]
[ext_resource type="Texture2D" uid="uid://pjv6lfxkpqnm" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/Espuma.png" id="11"]
[ext_resource type="Texture2D" uid="uid://busgpyb0mgovu" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Mar/Arena mojada.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dnxwepn0tbfb3" path="res://Assets/Images/Story/Scene3/Calle.png" id="13"]
[ext_resource type="Texture2D" uid="uid://pecwehgh1naq" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Kiosco del capitán.png" id="14"]
[ext_resource type="Texture2D" uid="uid://cehb2esnq8ktv" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Muelle.png" id="15"]
[ext_resource type="Texture2D" uid="uid://dnt8o73iqmvhi" path="res://Assets/Images/LimpiandoCosta/Pantalla 3/Cafetería.png" id="16"]
[ext_resource type="Texture2D" uid="uid://dancomu2yj30y" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Farol.png" id="17"]
[ext_resource type="Texture2D" uid="uid://d2rlulhddew3m" path="res://Assets/Images/Story/Characters/Secondary/CaptainCivil.png" id="18"]
[ext_resource type="Texture2D" uid="uid://b4hla5t2skhxw" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Basurero.png" id="19"]
[ext_resource type="Texture2D" uid="uid://xrh875t7q5xg" path="res://Assets/Images/Animaciones/Caminando/De espalda tres cuartos derecha/De espalda tres cuartos derecha 3.png" id="20"]
[ext_resource type="Texture2D" uid="uid://018fu2fnhmip" path="res://Assets/Images/Story/Characters/Main/Andres/AndresBoy.png" id="21"]
[ext_resource type="Texture2D" uid="uid://ctmnk8w42qmux" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Palmeras/Palmera 2.png" id="22"]
[ext_resource type="Texture2D" uid="uid://di6orq8l05crq" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Banca.png" id="23"]
[ext_resource type="Texture2D" uid="uid://bwwxtbkp3vfl6" path="res://Assets/Images/LimpiandoCosta/Pantalla 4/Palmeras/Palmera 3.png" id="25"]
[ext_resource type="Texture2D" uid="uid://b85mp45th1gka" path="res://Assets/Images/Animaciones/Caminando/Tres cuartos a la derecha/Derecha 9.png" id="26"]
[ext_resource type="Script" uid="uid://c46dgcummb4w8" path="res://Scenes/Story/Scene3/Scene3.gd" id="27"]
[ext_resource type="Texture2D" uid="uid://bt88gte75qjys" path="res://Assets/Images/PescaSobreAgua/Basura/Red de pesca.png" id="28"]
[ext_resource type="Texture2D" uid="uid://ri662eq7w5ww" path="res://Assets/Images/PescaSobreAgua/Basura/cuchara.png" id="29"]
[ext_resource type="Texture2D" uid="uid://xgsvw88tpu1n" path="res://Assets/Images/PescaSobreAgua/Basura/Calcetín.png" id="30"]
[ext_resource type="Texture2D" uid="uid://b5o4cecmwae2e" path="res://Assets/Images/PescaSobreAgua/Basura/Lata.png" id="31"]
[ext_resource type="Texture2D" uid="uid://cbwjiu4ommsm" path="res://Assets/Images/PescaSobreAgua/Basura/jeringa.png" id="32"]
[ext_resource type="Texture2D" uid="uid://bq8e6q6c10l42" path="res://Assets/Images/PescaSobreAgua/Basura/Pajilla.png" id="33"]
[ext_resource type="Texture2D" uid="uid://xhhk5pgalbko" path="res://Assets/Images/PescaSobreAgua/Basura/Botella.png" id="34"]
[ext_resource type="Texture2D" uid="uid://b6k2xfr01cjef" path="res://Assets/Images/PescaSobreAgua/Basura/Mascarilla.png" id="35"]

[node name="Scene3" type="Node2D"]
script = ExtResource("27")

[node name="Background" type="Node2D" parent="."]

[node name="Sand" type="Sprite2D" parent="Background"]
texture = ExtResource("2")
centered = false

[node name="WetSand" type="Sprite2D" parent="Background"]
position = Vector2(0, 960)
texture = ExtResource("12")
centered = false

[node name="Sea" type="Node2D" parent="Background"]

[node name="SeaMask1" type="Sprite2D" parent="Background/Sea"]
position = Vector2(1600, 1670)
texture = ExtResource("3")

[node name="SeaMask2" type="Sprite2D" parent="Background/Sea"]
position = Vector2(1600, 1670)
texture = ExtResource("10")

[node name="SeaMask3" type="Sprite2D" parent="Background/Sea"]
position = Vector2(1600, 1670)
texture = ExtResource("8")

[node name="Wave1" type="Sprite2D" parent="Background/Sea"]
position = Vector2(1600, 1490)
texture = ExtResource("9")

[node name="Wave2" type="Sprite2D" parent="Background/Sea"]
position = Vector2(1600, 1700)
texture = ExtResource("9")

[node name="Wave3" type="Sprite2D" parent="Background/Sea"]
position = Vector2(1600, 1900)
texture = ExtResource("9")

[node name="Foam" type="Sprite2D" parent="Background/Sea"]
position = Vector2(1600, 1600)
texture = ExtResource("11")

[node name="Road" type="Sprite2D" parent="Background"]
position = Vector2(-228, -140)
scale = Vector2(0.9, 0.9)
texture = ExtResource("13")
centered = false

[node name="Environment" type="Node2D" parent="."]
position = Vector2(0, 1)

[node name="Farol2" type="Sprite2D" parent="Environment"]
position = Vector2(2442, 858)
texture = ExtResource("17")

[node name="Palmera2" type="Sprite2D" parent="Environment"]
position = Vector2(2146, 937)
texture = ExtResource("22")
flip_h = true

[node name="Palmera1" type="Sprite2D" parent="Environment"]
position = Vector2(103, 264)
texture = ExtResource("1")

[node name="Arbusto" type="Sprite2D" parent="Environment/Palmera1"]
position = Vector2(-32, 289)
texture = ExtResource("5")

[node name="Arbusto2" type="Sprite2D" parent="Environment/Palmera1"]
position = Vector2(65, 289)
texture = ExtResource("5")

[node name="Arbusto3" type="Sprite2D" parent="Environment/Palmera1"]
position = Vector2(-135, 289)
texture = ExtResource("5")

[node name="Cafeteria" type="Sprite2D" parent="Environment"]
position = Vector2(2632, -114)
scale = Vector2(0.8, 0.8)
texture = ExtResource("16")

[node name="KioscoDelCapitan" type="Sprite2D" parent="Environment"]
position = Vector2(2746, 985)
scale = Vector2(0.8, 0.8)
texture = ExtResource("14")

[node name="Muelle" type="Sprite2D" parent="Environment"]
position = Vector2(3096, 1820)
texture = ExtResource("15")

[node name="Basurero" type="Sprite2D" parent="Environment"]
position = Vector2(613, 302)
texture = ExtResource("19")

[node name="Basurero2" type="Sprite2D" parent="Environment"]
position = Vector2(1864, 134)
texture = ExtResource("19")

[node name="Banca" type="Sprite2D" parent="Environment"]
position = Vector2(1668, 581)
texture = ExtResource("23")

[node name="Banca2" type="Sprite2D" parent="Environment"]
position = Vector2(2296, 1004)
texture = ExtResource("23")

[node name="Farol" type="Sprite2D" parent="Environment"]
position = Vector2(1982, 128)
texture = ExtResource("17")

[node name="Palmera3" type="Sprite2D" parent="Environment"]
position = Vector2(1756, 341)
texture = ExtResource("25")

[node name="Characters" type="Node2D" parent="."]

[node name="Bibliotecaria" type="Sprite2D" parent="Characters"]
position = Vector2(903, 285)
texture = ExtResource("4")

[node name="DogKabu" type="Sprite2D" parent="Characters"]
position = Vector2(1968, 1140)
texture = ExtResource("6")

[node name="CaptainCivil" type="Sprite2D" parent="Characters"]
position = Vector2(2092, 1081)
texture = ExtResource("18")

[node name="AndresBoy" type="Sprite2D" parent="Characters"]
visible = false
position = Vector2(1991, 539)
texture = ExtResource("21")

[node name="IleaSide" type="Sprite2D" parent="Characters"]
position = Vector2(1540, 862)
scale = Vector2(0.7, 0.7)
texture = ExtResource("26")
flip_h = true

[node name="IleaBack" type="Sprite2D" parent="Characters"]
visible = false
position = Vector2(1946, 645)
scale = Vector2(0.7, 0.7)
texture = ExtResource("20")

[node name="Basura" type="Node2D" parent="."]

[node name="Botella" type="Sprite2D" parent="Basura"]
position = Vector2(365, 569)
scale = Vector2(0.5, 0.5)
texture = ExtResource("34")

[node name="Calcetín" type="Sprite2D" parent="Basura"]
position = Vector2(505, 835)
scale = Vector2(0.5, 0.5)
texture = ExtResource("30")

[node name="Cuchara" type="Sprite2D" parent="Basura"]
position = Vector2(194, 902)
scale = Vector2(0.5, 0.5)
texture = ExtResource("29")

[node name="Jeringa" type="Sprite2D" parent="Basura"]
position = Vector2(1016, 683)
scale = Vector2(0.5, 0.5)
texture = ExtResource("32")

[node name="Lata" type="Sprite2D" parent="Basura"]
position = Vector2(752, 562)
scale = Vector2(0.5, 0.5)
texture = ExtResource("31")

[node name="Mascarilla" type="Sprite2D" parent="Basura"]
position = Vector2(1305, 530)
scale = Vector2(0.5, 0.5)
texture = ExtResource("35")

[node name="Pajilla" type="Sprite2D" parent="Basura"]
position = Vector2(1302, 883)
scale = Vector2(0.5, 0.5)
texture = ExtResource("33")

[node name="RedDePesca" type="Sprite2D" parent="Basura"]
position = Vector2(2400, 1381)
texture = ExtResource("28")
